# TimeController

Client/: CMakeLists.txt  activitytime.cpp  activitytime.h  app.cpp  app.h  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operatingsystemfactory.cpp  operatingsystemfactory.h  operatingsystemprogram.cpp  operatingsystemprogram.h  secondwindow.cpp  secondwindow.h  secondwindow.ui  windowssystem.cpp  windowssystem.h  windowssystemprogram.cpp  windowssystemprogram.h
TimeController/: CMakeLists.txt  clientdb.cpp  clientdb.h  main.cpp  server.cpp  server.h
build-Client-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Client-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-e4f89634ed01b891f159.json  directory-.-Debug-f985d678f5cecb71e4ca.json  index-2023-05-11T12-52-30-0133.json  (+2 more)
build-Client-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Client-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TimeController-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-TimeController-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-TimeController-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TimeController-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/TimeController_autogen/: deps
build-TimeController-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/TimeController_autogen/EWIEGA46WW/: moc_server.cpp  moc_server.cpp.d
(+137 files in other folders)
